	* src/EditPerson.py: Remove numerous multiple definitions.
	* src/AttrEdit.py (__init__): Set text to translated attribute type.
	* src/const.py.in (display_attr): Add function.

	* src/DbPrompter.py (ImportDbPrompter.chooser): Typo.

	* src/Marriage.py (on_add_clicked,on_event_update_clicked): Typos.
	* src/AddSpouse.py (select_spouse_clicked): Typo.

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/AddrEdit.py: Typo.
	* src/EditPerson.py (on_add_addr_clicked): Typos.
	* src/EditSource.py (display_references): Add lots of missed
	source references.
	* src/ImageSelect.py: Use PluginsMgr instead of Plugins.

2005-03-07  Don Allingham  <don@gramps-project.org>
	* src/RelLib.py: more documentation

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (post_load): Upgrade even if no callback.

2005-03-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: display upgrade messages to stdout

2005-03-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add upgrade to version 3 for new Name type
	* src/NameEdit.py: add date editor field
	* src/ReadXML.py: read date field attached to a name
	* src/WriteXML.py: write date field attached to a name
	* src/RelLib.py: add date field to Name
	* src/gramps.glade: add date editor field to Name Editor dialog

2005-03-06 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditSource.py (display_references): List source's references
	from personal and family gallery objects.

2005-03-04 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Make work when no value
	is given; (HasFamilyAttribute.apply): Make work when no value is given.

2005-03-03 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Fix the rule.
	(HasFamilyAttribute.apply): Fix the rule.
	* src/Marriage.py (on_update_attr_clicked,on_add_attr_clicked):
	Pass the window to the attribute editor.
